# ha-hikvision-doorbell-integration

./: .gitignore  README.md  hacs.json  pyproject.toml
custom_components/local_hikvision/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  event.py  lock.py  manifest.json  services.py  services.yaml  strings.json
custom_components/local_hikvision/isapi/: __init__.py  client.py  errors.py  events.py  models.py
custom_components/local_hikvision/translations/: en.json
docs/: IMPLEMENTATION_PLAN.md
tests/: conftest.py  test_access.py  test_client.py  test_config.py  test_events.py
