# SPDX-FileCopyrightText: 2026 Turzi
# SPDX-License-Identifier: Apache-2.0

[project]
name = "local-hikvision"
version = "0.1.0"
description = "Home Assistant custom integration for Hikvision door stations (Turzi)"
requires-python = ">=3.13.2,<3.14"
dependencies = [
    "homeassistant>=2026.2.0",
    "pylocal-hikvision>=0.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-homeassistant-custom-component>=0.13.316",
]

[dependency-groups]
dev = [
    "interrogate>=1.7.0",
    "mypy>=1.19.1",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-homeassistant-custom-component>=0.13.316",
    "ruff>=0.15.2",
]

# Use the local sibling checkout of the protocol library during development.
[tool.uv.sources]
pylocal-hikvision = { path = "../pylocal-hikvision", editable = true }

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C90", "D", "UP", "B", "S", "T20", "SIM"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D103"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.interrogate]
ignore-init-method = false
ignore-init-module = true
fail-under = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
