# SPDX-FileCopyrightText: 2026 Turzi
# SPDX-License-Identifier: Apache-2.0

[project]
name = "local-hikvision"
version = "0.1.0"
description = "Home Assistant custom integration for Hikvision door stations (Turzi)"
requires-python = ">=3.13.2,<3.14"
# The ISAPI client is vendored at custom_components/local_hikvision/isapi/ and
# uses only httpx + stdlib (both shipped by Home Assistant) — no external deps.
dependencies = [
    "homeassistant>=2026.2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-homeassistant-custom-component>=0.13.316",
    "respx>=0.22.0",
]

[dependency-groups]
dev = [
    "interrogate>=1.7.0",
    "mypy>=1.19.1",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-homeassistant-custom-component>=0.13.316",
    "respx>=0.22.0",
    "ruff>=0.15.2",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C90", "D", "UP", "B", "S", "T20", "SIM"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D103"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.interrogate]
ignore-init-method = false
ignore-init-module = true
fail-under = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
